[package]
name = "ckb-vm"
version = "0.1.0"
license = "MIT"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
build = "build.rs"
autobins = false

[dependencies]
byteorder = "1"
goblin = "0.0.19"
memmap = "0.7.0"
libc = "0.2.47"

[build-dependencies]
cc = "1.0"

[[bin]]
name = "interpreter32"
path = "src/interpreter32.rs"

[[bin]]
name = "interpreter64"
path = "src/interpreter64.rs"

[[bin]]
name = "jit32"
path = "src/jit32.rs"

[[bin]]
name = "jit64"
path = "src/jit64.rs"
